--- a/2학년동.html
+++ b/2학년동.html
@@ -2,68 +2,67 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>2학년동</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>2학년동 - 북원맵</title>
   <style>
     body {
       font-family: sans-serif;
       margin: 0;
-      padding: 1rem;
-      background-color: #fff;
-    }
-    header {
+      padding: 0;
       text-align: center;
-      font-size: 2rem;
+    }
+
+    h1 {
+      margin-top: 20px;
+      font-size: 1.8rem;
+    }
+
+    .floor-image {
+      width: 90%;
+      max-width: 600px;
+      margin: 20px auto;
+      display: block;
+      border: 2px solid #ccc;
+      border-radius: 10px;
+    }
+
+    .floor-label {
       font-weight: bold;
-      margin-bottom: 1rem;
-      color: #3c5a99;
-    }
-    .floor {
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 1rem;
-      margin-bottom: 1rem;
-    }
-    .floor h2 {
-      color: #3c5a99;
-      margin-bottom: 0.5rem;
-    }
-    .highlight {
-      border: 2px solid red;
-      animation: blink 1s infinite;
-    }
-    @keyframes blink {
-      50% {
-        border-color: transparent;
-      }
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
 
-  <header>2학년동</header>
+  <h1>2학년동(신관동)</h1>
+  
+  <!-- 돌아가기 버튼 -->
+  <button onclick="history.back()" style="
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #f2f2f2;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    cursor: pointer;
+  ">
+    돌아가기
+  </button>
 
-  <div class="floor">
-    <h2>1층</h2>
-    <ul>
-      <li>2-1 교실</li>
-      <li>2-2 교실</li>
-      <li>엘리베이터</li>
-      <li>계단</li>
-    </ul>
+  <div>
+    <div class="floor-label">4층</div>
+    <img src="image\2학년_4층.jpg" alt="2학년동 4층" class="floor-image" />
+
+    <div class="floor-label">3층</div>
+    <img src="image\2학년_3층.jpg" alt="2학년동 4층" class="floor-image" />
+
+    <div class="floor-label">2층</div>
+    <img src="image\2학년_2층.jpg" alt="2학년동 2층" class="floor-image" />
+
+    <div class="floor-label">1층</div>
+    <img src="image\2학년_1층.jpg" alt="2학년동 1층" class="floor-image" />
   </div>
-
-  <div class="floor">
-    <h2>2층</h2>
-    <ul>
-      <li>2-3 교실</li>
-      <li>2-4 교실</li>
-      <li>엘리베이터</li>
-      <li>계단</li>
-    </ul>
-  </div>
-
-  <a href="index.html">← 돌아가기</a>
 
 </body>
 </html>
