--- a/3학년동.html
+++ b/3학년동.html
@@ -34,7 +34,7 @@
 </head>
 <body>
 
-  <h1>3학년동 층별 안내</h1>
+  <h1>3학년동(별관동)</h1>
   
   <!-- 돌아가기 버튼 -->
   <button onclick="history.back()" style="
@@ -47,18 +47,18 @@
     border-radius: 8px;
     cursor: pointer;
   ">
-    ← 돌아가기
+    돌아가기
   </button>
 
   <div>
     <div class="floor-label">3층</div>
-    <img src="3학년동-3층.jpg" alt="3학년동 3층" class="floor-image" />
+    <img src="image\3학년_3층.jpg" alt="3학년동 3층" class="floor-image" />
 
     <div class="floor-label">2층</div>
-    <img src="3학년동-2층.jpg" alt="3학년동 2층" class="floor-image" />
+    <img src="image\3학년_2층.jpg" alt="3학년동 2층" class="floor-image" />
 
     <div class="floor-label">1층</div>
-    <img src="3학년동-1층.jpg" alt="3학년동 1층" class="floor-image" />
+    <img src="image\3학년_1층.jpg" alt="3학년동 1층" class="floor-image" />
   </div>
 
 </body>
